# streamlit_javaRest

./: README.md  pyproject.toml
src/streamlit_javarest/: main.py
